# charsec

./: .gitignore  README.md  pyproject.toml  usage.ipynb
demo/: auto.py  native.py  simple.py  test.md
src/charsec/: __init__.py  cli.py  lib.py
tests/: test_lib.py
